gdm-{wayland,x}-session: omit GNOME_SHELL_SESSION_MODE from environment

After a user logs out, the systemd --user session may still be running
(if, say, the user session was left around in the closing state,
because of pulseaudio).

If that happens, new user sessions will inherit the environment of
previous sessions.  Some of these environment variables are already
intentionally pruned, DISPLAY, XAUTHORITY, WAYLAND_SOCKET, etc.  One
environment variable that isn't pruned, but should be, is
GNOME_SHELL_SESSION_MODE.

If it lingers, users could end up in classic mode even though they
picked the non-classic mode from the gear menu.

This commit adds GNOME_SHELL_SESSION_MODE to the list of environment
variables to prune.

(minor changes to original patch and commit message from Ray Strode)

https://bugzilla.gnome.org/show_bug.cgi?id=785918